apps/droppedneedle/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: needle
  labels:
    network-egress-dns: "true"
    network-egress-world: "true"
