apps/droppedneedle/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: needle
  namespace: needle
spec:
  selector:
    app: needle
  ports:
    - port: 80
      targetPort: 8688
