apps/droppedneedle/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: needle
  namespace: needle
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  rules:
    - host: droppedneedle.wevelsiep.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: needle
                port:
                  number: 80
